code/0 - httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argo-cd
  namespace: gke-gateway
spec:
  parentRefs:
    - kind: Gateway
      name: gke-gateway-external
      namespace: gke-gateway
  rules:
    - backendRefs:
        - kind: Service
          name: argo-cd-argocd-server
          port: 80
